fits: avoid use of nom.tam.fits classes
This large commit replaces all use of the TAMFITS package
(nom.tam.* classes) in the FITS package.

For tables, most of the data manipulation was already done using
homegrown classes, and only the header manipulation has been changed
to the recently introduced header I/O classes in FITS.
Some additional changes are required here because TAMFITS required
use of the nom.tam.util.ArrayData{Input,Output} classes for I/O streams.

The FITS array handling has mostly not been reimplemented and so
nom.tam.fits and classes building on it are required for legacy
packages like ARRAY, NDX, HDX, NDTOOLS.  The relevant classes that
are still required and still depend on nom.tam.fits are now moved to
a new package OLDFITS containing legacy non-table FITS I/O classes.

STILTS no longer has any dependency on TAMFITS at this commit.
TOPCAT is not quite free because of DATANODE dependencies in the
Hierarchy Browser.

At this commit everything still compiles and passes unit tests,
and should still work, though the handling of FITS BINTABLEs in the
DATANODE package (treeview, topcat hierarchy browser) is now less
efficient since it now uses TAMFITS handling rather than
fits.BintableStarTable.  That should be fixed in a future commit.